project/docker+k8s/马哥docker+k8s/network/ingress-def.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
spec:
  # 选择所有pod
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
